[gd_scene load_steps=3 format=3 uid="uid://5tmg1af0akx"]

[ext_resource type="Script" uid="uid://bmpp580ch1o0j" path="res://interactables/switch.gd" id="1_fjjqx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aidnp"]
size = Vector2(6, 6)

[node name="Switch" type="Node2D"]
script = ExtResource("1_fjjqx")

[node name="ActiveSwitch" type="Polygon2D" parent="."]
scale = Vector2(2, 2)
polygon = PackedVector2Array(0, -1, 3, -1, 3, -2, 4, -2, 4, 2, 3, 2, 3, 1, 0, 1)

[node name="PressedSwitch" type="Polygon2D" parent="."]
visible = false
position = Vector2(-5, 0)
scale = Vector2(2, 2)
color = Color(0.336608, 0.336608, 0.336608, 1)
polygon = PackedVector2Array(2.5, -1, 3, -1, 3, -2, 4, -2, 4, 2, 3, 2, 3, 1, 2.5, 1)

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_aidnp")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
